agentforce/force-app/main/default/objects/Case/fields/Agent_Created__c.field-meta.xml
<CustomField>
    <fullName>Agent_Created__c</fullName>
    <description>The support intake agent opened this case.</description>
    <label>Created by Agent</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>