agentforce/force-app/main/default/objects/Case/fields/Agent_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Agent_Resolved__c</fullName>
    <description>Solved in the conversation with a knowledge article.</description>
    <label>Resolved by Agent</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>