agentforce/force-app/main/default/objects/Case/fields/Agent_Summary__c.field-meta.xml
<CustomField>
    <fullName>Agent_Summary__c</fullName>
    <description>What the customer said, what was tried and why it was handed off.</description>
    <label>Agent Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>