agentforce/force-app/main/default/objects/Case/fields/KB_Article__c.field-meta.xml
<CustomField>
    <fullName>KB_Article__c</fullName>
    <description>Knowledge article the agent used.</description>
    <label>KB Article</label>
    <length>20</length>
    <type>Text</type>
</CustomField>