agentforce/force-app/main/default/objects/Case/listViews/Agent_Created_Cases.listView-meta.xml
<ListView>
    <fullName>Agent_Created_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>Product_Area__c</columns>
    <columns>Agent_Resolved__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters><field>Agent_Created__c</field><operation>equals</operation><value>1</value></filters>
    <label>Agent Created Cases</label>
</ListView>